# SeleniumTesting

./: .gitignore  README.md  pyproject.toml
browser/: browser.py  browser_simple_script.py
tests/: test_browser.py
