[tool.poetry]
name = "seleniumtesting"
version = "0.1.0"
description = "sandbox for selenium testing"
authors = ["Mike <michael.pursell@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.1.0"
python-dotenv = "^0.19.2"
pytest = "^7.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
